static home page is ready

--- a/products/templates/includes/home/About.html
+++ b/products/templates/includes/home/About.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!-- =======================
 About START -->
 <section>
@@ -10,7 +11,7 @@ About START -->
           <span class="text-warning"><br />مناسب ترین </span> محصولات
         </h2>
         <!-- Image -->
-        <img src="assets/images/about/03.jpg" class="rounded-2" alt="" />
+        <img src="{% static 'assets/images/about/03.jpg' %}" class="rounded-2" alt="" />
       </div>
       <div class="col-lg-7">
         <div class="row g-4">
