--- a/products/templates/includes/home/Discount.html
+++ b/products/templates/includes/home/Discount.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!-- =======================
 Event START -->
       <section class="pb-0 pb-md-5">
@@ -27,7 +28,7 @@ Event START -->
                   <div class="position-relative">
                     <!-- Image -->
                     <img
-                      src="assets/images/courses/4by3/21.jpg"
+                      src="{% static 'assets/images/courses/4by3/21.jpg' %}"
                       class="card-img"
                       alt="course image"
                     />
