--- a/products/templates/includes/home/News.html
+++ b/products/templates/includes/home/News.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!-- =======================
 Newsletter START -->
 <section class="mb-n9 position-relative z-index-9">
@@ -44,7 +45,7 @@ Newsletter START -->
             class="p-2 bg-white shadow rounded-3 rotate-74 position-absolute top-0 start-0 ms-3 mt-5 d-none d-sm-block"
           >
             <img
-              src="assets/images/client/science.svg"
+              src="{% static 'assets/images/client/science.svg' %}"
               class="h-40px"
               alt="Icon"
             />
@@ -53,7 +54,7 @@ Newsletter START -->
             class="p-1 bg-white shadow rounded-3 rotate-74 position-absolute top-0 end-0 mt-5 me-5 d-none d-sm-block"
           >
             <img
-              src="assets/images/client/angular.svg"
+              src="{% static 'assets/images/client/angular.svg' %}"
               class="h-30px"
               alt="Icon"
             />
@@ -62,7 +63,7 @@ Newsletter START -->
             class="p-2 bg-white shadow rounded-3 rotate-130 position-absolute bottom-0 start-50 ms-5 mb-2 d-none d-lg-block"
           >
             <img
-              src="assets/images/client/figma.svg"
+              src="{% static 'assets/images/client/figma.svg' %}"
               class="h-20px"
               alt="Icon"
             />
