--- a/products/templates/includes/home/Suggested.html
+++ b/products/templates/includes/home/Suggested.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!-- =======================
 Trending courses START -->
 <section class="pt-0 pt-md-5">
@@ -20,7 +21,7 @@ Trending courses START -->
             <div class="card-overlay-hover">
               <!-- Image -->
               <img
-                src="assets/images/courses/4by3/17.jpg"
+                src="{% static 'assets/images/courses/4by3/17.jpg' %}"
                 class="card-img-top"
                 alt="course image"
               />
