--- a/products/templates/products/Home.html
+++ b/products/templates/products/Home.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% include "includes/home/Hero.html" %}
 {% include "includes/home/About.html" %}
-{% include "includes/home/ُSuggested.html" %}
+{% include "includes/home/Suggested.html" %}
 {% include "includes/home/Discount.html" %}
 {% include "includes/home/News.html" %}
 
