--- a/products/templates/includes/home/Hero.html
+++ b/products/templates/includes/home/Hero.html
@@ -1,9 +1,10 @@
+{% load static %}
 <!-- =======================
 Main Banner START -->
 <section
   class="pt-0 position-relative overflow-hidden h-700px h-sm-600px h-lg-700px rounded-top-4 mx-2 mx-md-4"
   style="
-    background-image: url(assets/images/bg/03.jpg);
+    background-image: url('{% static 'assets/images/bg/03.jpg' %}');
     background-position: center;
     background-size: cover;
   "
