--- a/templates/includes/Footer.html
+++ b/templates/includes/Footer.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!-- ======================= Footer START -->
 <footer class="pt-0 bg-blue rounded-4 position-relative mx-2 mx-md-4 mb-3">
   <!-- SVG decoration for curve -->
@@ -19,7 +20,7 @@
         <!-- Logo -->
         <img
           class="mx-auto h-40px"
-          src="assets/images/logo-light.svg"
+          src="{% static 'assets/images/logo-light.svg' %}"
           alt="logo"
         />
         <p class="mt-3 text-white">توضیحات فوتر</p>
