--- a/templates/includes/TopHeader.html
+++ b/templates/includes/TopHeader.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!-- Top header START -->
 <div
   class="navbar-top navbar-dark bg-light d-none d-xl-block py-2 mx-2 mx-md-4 rounded-bottom-4"
@@ -47,28 +48,28 @@
             <a class="dropdown-item me-4" href="#"
               ><img
                 class="fa-fw me-2"
-                src="assets/images/flags/uk.svg"
+                src="{% static 'assets/images/flags/uk.svg' %}"
                 alt=""
               />فارسی</a
             >
             <a class="dropdown-item me-4" href="#"
               ><img
                 class="fa-fw me-2"
-                src="assets/images/flags/sp.svg"
+                src="{% static 'assets/images/flags/sp.svg' %}"
                 alt=""
               />انگلیسی</a
             >
             <a class="dropdown-item me-4" href="#"
               ><img
                 class="fa-fw me-2"
-                src="assets/images/flags/fr.svg"
+                src="{% static 'assets/images/flags/fr.svg' %}"
                 alt=""
               />اسپانیایی</a
             >
             <a class="dropdown-item me-4" href="#"
               ><img
                 class="fa-fw me-2"
-                src="assets/images/flags/gr.svg"
+                src="{% static 'assets/images/flags/gr.svg' %}"
                 alt=""
               />فرانسوی</a
             >
