--- a/products/templates/products/admin/ProductList.html
+++ b/products/templates/products/admin/ProductList.html
@@ -4,7 +4,7 @@
     <div class="row mb-3">
     <div class="col-12 d-sm-flex justify-content-between align-items-center">
         <h1 class="h3 mb-2 mb-sm-0 fs-5">لیست محصولات</h1>
-        <a href="" class="btn btn-sm btn-primary mb-0">
+        <a href="{% url 'products:admin_product_create' %}" class="btn btn-sm btn-primary mb-0">
         افزودن محصول
         </a>
     </div>
