refactoring code and adding category list

--- a/templates/includes/admin/Sidebar.html
+++ b/templates/includes/admin/Sidebar.html
@@ -81,10 +81,10 @@
             data-bs-parent="#navbar-sidebar"
           >
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'orders:admin_order_list' %}">لیست سفارشات</a>
+              <a class="nav-link" href="">لیست سفارشات</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'orders:admin_pending_orders' %}">
+              <a class="nav-link" href="">
                 سفارشات در انتظار
                 <span class="badge text-bg-warning rounded-circle ms-2">3</span>
               </a>
@@ -111,17 +111,17 @@
             data-bs-parent="#navbar-sidebar"
           >
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'users:admin_user_list' %}">لیست کاربران</a>
+              <a class="nav-link" href="">لیست کاربران</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'users:admin_user_create' %}">افزودن کاربر</a>
+              <a class="nav-link" href="">افزودن کاربر</a>
             </li>
           </ul>
         </li>
 
         <!-- Menu item 5 - Inventory -->
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'products:admin_inventory' %}">
+          <a class="nav-link" href="">
             <i class="fas fa-warehouse fa-fw me-2"></i>موجودی انبار
           </a>
         </li>
@@ -145,17 +145,17 @@
             data-bs-parent="#navbar-sidebar"
           >
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'orders:admin_sales_report' %}">گزارش فروش</a>
+              <a class="nav-link" href="">گزارش فروش</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'products:admin_low_stock_report' %}">کالاهای کم موجود</a>
+              <a class="nav-link" href="">کالاهای کم موجود</a>
             </li>
           </ul>
         </li>
 
         <!-- Menu item 7 - Settings -->
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'admin:index' %}">
+          <a class="nav-link" href="">
             <i class="fas fa-cog fa-fw me-2"></i>تنظیمات سایت
           </a>
         </li>
