user login and registeration

--- a/templates/includes/profile/Footer.html
+++ b/templates/includes/profile/Footer.html
@@ -7,7 +7,7 @@ Footer START -->
             <!-- Logo Widget -->
             <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
                 <!-- Logo START -->
-                <a href="{% url 'home' %}"> 
+                <a href="{% url 'products:home' %}"> 
                     <img class="h-20px" src="{% static 'assets/images/logo-light.svg' %}" alt="داروخانه آنلاین - برگشت به صفحه اصلی"> 
                 </a>
             </div>
