--- a/users/templates/users/user_registration.html
+++ b/users/templates/users/user_registration.html
@@ -1,4 +1,4 @@
-{% extends 'users/auth-base.html' %}
+{% extends 'auth-base.html' %}
 {% load static %}
 
 {% block title %}تکمیل ثبت نام - داروخانه آنلاین{% endblock %}
