--- a/templates/includes/Header.html
+++ b/templates/includes/Header.html
@@ -5,7 +5,7 @@
   <nav class="navbar navbar-expand-xl">
     <div class="container">
       <!-- Logo START -->
-      <a class="navbar-brand me-0" href="{% url 'home' %}">
+      <a class="navbar-brand me-0" href="{% url 'products:home' %}">
         <img 
           class="light-mode-item navbar-brand-item" 
           src="{% static 'assets/images/logo.svg' %}" 
@@ -41,7 +41,7 @@
         <ul class="navbar-nav navbar-nav-scroll mx-auto">
           <!-- Nav items -->
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'home' %}">صفحه اصلی</a>
+            <a class="nav-link" href="{% url 'products:home' %}">صفحه اصلی</a>
           </li>
           <li class="nav-item dropdown">
             <a 
