--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -1,4 +1,4 @@
-{% extends 'users/profile-base.html' %}
+{% extends 'profile-base.html' %}
 {% load static %}
 
 {% block title %}داشبورد - {{ user.get_full_name }}{% endblock %}
